--- a/Employee_Managment_Backend/Employee_Managment_Backend/src/main/resources/application.properties
+++ b/Employee_Managment_Backend/Employee_Managment_Backend/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 ######### Database Properties ###############################
 spring.datasource.url=jdbc:postgresql://localhost:5432/employee_managment_system
 spring.datasource.username=postgres
-spring.datasource.password=Vks0107@
+spring.datasource.password=
 #JPA Configuration
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
